LockstepParser.py
# Generated from Lockstep.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class LockstepParser(Parser):

    grammarFileName = "Lockstep.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = [
        "<INVALID>",
        "'struct'",
        "'{'",
        "'}'",
        "';'",
        "'pure'",
        "'('",
        "')'",
        "','",
        "'shader'",
        "'filter'",
        "'in'",
        "'out'",
        "'uniform'",
        "'accum'",
        "'pipeline'",
        "'stream'",
        "'<'",
        "'>'",
        "'accumulator'",
        "'='",
        "'bind'",
        "'fold'",
        "'return'",
        "'*'",
        "'/'",
        "'%'",
        "'+'",
        "'-'",
        "'<='",
        "'>='",
        "'=='",
        "'!='",
        "'&&'",
        "'||'",
        "'!'",
        "'.'",
    ]

    symbolicNames = [
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "ID",
        "INT",
        "FLOAT",
        "WS",
        "COMMENT",
    ]

    RULE_program = 0
    RULE_declaration = 1
    RULE_structDecl = 2
    RULE_structMember = 3
    RULE_pureDecl = 4
    RULE_pureParamList = 5
    RULE_shaderDecl = 6
    RULE_filterDecl = 7
    RULE_paramList = 8
    RULE_param = 9
    RULE_pipelineDecl = 10
    RULE_pipelineMember = 11
    RULE_streamDecl = 12
    RULE_accumDecl = 13
    RULE_uniformDecl = 14
    RULE_bindBlock = 15
    RULE_bindStmt = 16
    RULE_argList = 17
    RULE_statement = 18
    RULE_varDecl = 19
    RULE_assignStmt = 20
    RULE_returnStmt = 21
    RULE_expr = 22
    RULE_exprList = 23
    RULE_lvalue = 24
    RULE_typeName = 25

    ruleNames = [
        "program",
        "declaration",
        "structDecl",
        "structMember",
        "pureDecl",
        "pureParamList",
        "shaderDecl",
        "filterDecl",
        "paramList",
        "param",
        "pipelineDecl",
        "pipelineMember",
        "streamDecl",
        "accumDecl",
        "uniformDecl",
        "bindBlock",
        "bindStmt",
        "argList",
        "statement",
        "varDecl",
        "assignStmt",
        "returnStmt",
        "expr",
        "exprList",
        "lvalue",
        "typeName",
    ]

    EOF = Token.EOF
    T__0 = 1
    T__1 = 2
    T__2 = 3
    T__3 = 4
    T__4 = 5
    T__5 = 6
    T__6 = 7
    T__7 = 8
    T__8 = 9
    T__9 = 10
    T__10 = 11
    T__11 = 12
    T__12 = 13
    T__13 = 14
    T__14 = 15
    T__15 = 16
    T__16 = 17
    T__17 = 18
    T__18 = 19
    T__19 = 20
    T__20 = 21
    T__21 = 22
    T__22 = 23
    T__23 = 24
    T__24 = 25
    T__25 = 26
    T__26 = 27
    T__27 = 28
    T__28 = 29
    T__29 = 30
    T__30 = 31
    T__31 = 32
    T__32 = 33
    T__33 = 34
    T__34 = 35
    T__35 = 36
    ID = 37
    INT = 38
    FLOAT = 39
    WS = 40
    COMMENT = 41

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(
            self, self.atn, self.decisionsToDFA, self.sharedContextCache
        )
        self._predicates = None

    class ProgramContext(ParserRuleContext):

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(LockstepParser.EOF, 0)

        def declaration(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(LockstepParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(LockstepParser.DeclarationContext, i)

        def getRuleIndex(self):
            return LockstepParser.RULE_program

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterProgram"):
                listener.enterProgram(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitProgram"):
                listener.exitProgram(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitProgram"):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)

    def program(self):

        localctx = LockstepParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3F) == 0 and (
                (1 << _la)
                & (
                    (1 << LockstepParser.T__0)
                    | (1 << LockstepParser.T__4)
                    | (1 << LockstepParser.T__8)
                    | (1 << LockstepParser.T__9)
                    | (1 << LockstepParser.T__14)
                )
            ) != 0:
                self.state = 52
                self.declaration()
                self.state = 57
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 58
            self.match(LockstepParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclarationContext(ParserRuleContext):

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def structDecl(self):
            return self.getTypedRuleContext(LockstepParser.StructDeclContext, 0)

        def pureDecl(self):
            return self.getTypedRuleContext(LockstepParser.PureDeclContext, 0)

        def shaderDecl(self):
            return self.getTypedRuleContext(LockstepParser.ShaderDeclContext, 0)

        def filterDecl(self):
            return self.getTypedRuleContext(LockstepParser.FilterDeclContext, 0)

        def pipelineDecl(self):
            return self.getTypedRuleContext(LockstepParser.PipelineDeclContext, 0)

        def getRuleIndex(self):
            return LockstepParser.RULE_declaration

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterDeclaration"):
                listener.enterDeclaration(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitDeclaration"):
                listener.exitDeclaration(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitDeclaration"):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)

    def declaration(self):

        localctx = LockstepParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 65
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LockstepParser.T__0]:
                self.enterOuterAlt(localctx, 1)
                self.state = 60
                self.structDecl()
                pass
            elif token in [LockstepParser.T__4]:
                self.enterOuterAlt(localctx, 2)
                self.state = 61
                self.pureDecl()
                pass
            elif token in [LockstepParser.T__8]:
                self.enterOuterAlt(localctx, 3)
                self.state = 62
                self.shaderDecl()
                pass
            elif token in [LockstepParser.T__9]:
                self.enterOuterAlt(localctx, 4)
                self.state = 63
                self.filterDecl()
                pass
            elif token in [LockstepParser.T__14]:
                self.enterOuterAlt(localctx, 5)
                self.state = 64
                self.pipelineDecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StructDeclContext(ParserRuleContext):

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(LockstepParser.ID, 0)

        def structMember(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(LockstepParser.StructMemberContext)
            else:
                return self.getTypedRuleContext(LockstepParser.StructMemberContext, i)

        def getRuleIndex(self):
            return LockstepParser.RULE_structDecl

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterStructDecl"):
                listener.enterStructDecl(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitStructDecl"):
                listener.exitStructDecl(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitStructDecl"):
                return visitor.visitStructDecl(self)
            else:
                return visitor.visitChildren(self)

    def structDecl(self):

        localctx = LockstepParser.StructDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_structDecl)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(LockstepParser.T__0)
            self.state = 68
            self.match(LockstepParser.ID)
            self.state = 69
            self.match(LockstepParser.T__1)
            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == LockstepParser.ID:
                self.state = 70
                self.structMember()
                self.state = 75
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 76
            self.match(LockstepParser.T__2)
            self.state = 77
            self.match(LockstepParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StructMemberContext(ParserRuleContext):

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeName(self):
            return self.getTypedRuleContext(LockstepParser.TypeNameContext, 0)

        def ID(self):
            return self.getToken(LockstepParser.ID, 0)

        def getRuleIndex(self):
            return LockstepParser.RULE_structMember

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterStructMember"):
                listener.enterStructMember(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitStructMember"):
                listener.exitStructMember(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitStructMember"):
                return visitor.visitStructMember(self)
            else:
                return visitor.visitChildren(self)

    def structMember(self):

        localctx = LockstepParser.StructMemberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_structMember)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.typeName()
            self.state = 80
            self.match(LockstepParser.ID)
            self.state = 81
            self.match(LockstepParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PureDeclContext(ParserRuleContext):

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeName(self):
            return self.getTypedRuleContext(LockstepParser.TypeNameContext, 0)

        def ID(self):
            return self.getToken(LockstepParser.ID, 0)

        def pureParamList(self):
            return self.getTypedRuleContext(LockstepParser.PureParamListContext, 0)

        def statement(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(LockstepParser.StatementContext)
            else:
                return self.getTypedRuleContext(LockstepParser.StatementContext, i)

        def getRuleIndex(self):
            return LockstepParser.RULE_pureDecl

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterPureDecl"):
                listener.enterPureDecl(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitPureDecl"):
                listener.exitPureDecl(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitPureDecl"):
                return visitor.visitPureDecl(self)
            else:
                return visitor.visitChildren(self)

    def pureDecl(self):

        localctx = LockstepParser.PureDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_pureDecl)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(LockstepParser.T__4)
            self.state = 84
            self.typeName()
            self.state = 85
            self.match(LockstepParser.ID)
            self.state = 86
            self.match(LockstepParser.T__5)
            self.state = 88
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == LockstepParser.ID:
                self.state = 87
                self.pureParamList()

            self.state = 90
            self.match(LockstepParser.T__6)
            self.state = 91
            self.match(LockstepParser.T__1)
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == LockstepParser.T__22 or _la == LockstepParser.ID:
                self.state = 92
                self.statement()
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 98
            self.match(LockstepParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PureParamListContext(ParserRuleContext):

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeName(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(LockstepParser.TypeNameContext)
            else:
                return self.getTypedRuleContext(LockstepParser.TypeNameContext, i)

        def ID(self, i: int = None):
            if i is None:
                return self.getTokens(LockstepParser.ID)
            else:
                return self.getToken(LockstepParser.ID, i)

        def getRuleIndex(self):
            return LockstepParser.RULE_pureParamList

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterPureParamList"):
                listener.enterPureParamList(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitPureParamList"):
                listener.exitPureParamList(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitPureParamList"):
                return visitor.visitPureParamList(self)
            else:
                return visitor.visitChildren(self)

    def pureParamList(self):

        localctx = LockstepParser.PureParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_pureParamList)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.typeName()
            self.state = 101
            self.match(LockstepParser.ID)
            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == LockstepParser.T__7:
                self.state = 102
                self.match(LockstepParser.T__7)
                self.state = 103
                self.typeName()
                self.state = 104
                self.match(LockstepParser.ID)
                self.state = 110
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ShaderDeclContext(ParserRuleContext):

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(LockstepParser.ID, 0)

        def paramList(self):
            return self.getTypedRuleContext(LockstepParser.ParamListContext, 0)

        def statement(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(LockstepParser.StatementContext)
            else:
                return self.getTypedRuleContext(LockstepParser.StatementContext, i)

        def getRuleIndex(self):
            return LockstepParser.RULE_shaderDecl

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterShaderDecl"):
                listener.enterShaderDecl(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitShaderDecl"):
                listener.exitShaderDecl(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitShaderDecl"):
                return visitor.visitShaderDecl(self)
            else:
                return visitor.visitChildren(self)

    def shaderDecl(self):

        localctx = LockstepParser.ShaderDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_shaderDecl)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(LockstepParser.T__8)
            self.state = 112
            self.match(LockstepParser.ID)
            self.state = 113
            self.match(LockstepParser.T__5)
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((_la) & ~0x3F) == 0 and (
                (1 << _la)
                & (
                    (1 << LockstepParser.T__10)
                    | (1 << LockstepParser.T__11)
                    | (1 << LockstepParser.T__12)
                    | (1 << LockstepParser.T__13)
                )
            ) != 0:
                self.state = 114
                self.paramList()

            self.state = 117
            self.match(LockstepParser.T__6)
            self.state = 118
            self.match(LockstepParser.T__1)
            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == LockstepParser.T__22 or _la == LockstepParser.ID:
                self.state = 119
                self.statement()
                self.state = 124
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 125
            self.match(LockstepParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FilterDeclContext(ParserRuleContext):

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(LockstepParser.ID, 0)

        def paramList(self):
            return self.getTypedRuleContext(LockstepParser.ParamListContext, 0)

        def statement(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(LockstepParser.StatementContext)
            else:
                return self.getTypedRuleContext(LockstepParser.StatementContext, i)

        def getRuleIndex(self):
            return LockstepParser.RULE_filterDecl

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterFilterDecl"):
                listener.enterFilterDecl(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitFilterDecl"):
                listener.exitFilterDecl(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitFilterDecl"):
                return visitor.visitFilterDecl(self)
            else:
                return visitor.visitChildren(self)

    def filterDecl(self):

        localctx = LockstepParser.FilterDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_filterDecl)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(LockstepParser.T__9)
            self.state = 128
            self.match(LockstepParser.ID)
            self.state = 129
            self.match(LockstepParser.T__5)
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((_la) & ~0x3F) == 0 and (
                (1 << _la)
                & (
                    (1 << LockstepParser.T__10)
                    | (1 << LockstepParser.T__11)
                    | (1 << LockstepParser.T__12)
                    | (1 << LockstepParser.T__13)
                )
            ) != 0:
                self.state = 130
                self.paramList()

            self.state = 133
            self.match(LockstepParser.T__6)
            self.state = 134
            self.match(LockstepParser.T__1)
            self.state = 138
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == LockstepParser.T__22 or _la == LockstepParser.ID:
                self.state = 135
                self.statement()
                self.state = 140
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 141
            self.match(LockstepParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamListContext(ParserRuleContext):

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(LockstepParser.ParamContext)
            else:
                return self.getTypedRuleContext(LockstepParser.ParamContext, i)

        def getRuleIndex(self):
            return LockstepParser.RULE_paramList

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterParamList"):
                listener.enterParamList(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitParamList"):
                listener.exitParamList(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitParamList"):
                return visitor.visitParamList(self)
            else:
                return visitor.visitChildren(self)

    def paramList(self):

        localctx = LockstepParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_paramList)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.param()
            self.state = 148
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == LockstepParser.T__7:
                self.state = 144
                self.match(LockstepParser.T__7)
                self.state = 145
                self.param()
                self.state = 150
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamContext(ParserRuleContext):

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeName(self):
            return self.getTypedRuleContext(LockstepParser.TypeNameContext, 0)

        def ID(self):
            return self.getToken(LockstepParser.ID, 0)

        def getRuleIndex(self):
            return LockstepParser.RULE_param

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterParam"):
                listener.enterParam(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitParam"):
                listener.exitParam(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitParam"):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)

    def param(self):

        localctx = LockstepParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_param)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            _la = self._input.LA(1)
            if not (
                (
                    ((_la) & ~0x3F) == 0
                    and (
                        (1 << _la)
                        & (
                            (1 << LockstepParser.T__10)
                            | (1 << LockstepParser.T__11)
                            | (1 << LockstepParser.T__12)
                            | (1 << LockstepParser.T__13)
                        )
                    )
                    != 0
                )
            ):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 152
            self.typeName()
            self.state = 153
            self.match(LockstepParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PipelineDeclContext(ParserRuleContext):

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(LockstepParser.ID, 0)

        def bindBlock(self):
            return self.getTypedRuleContext(LockstepParser.BindBlockContext, 0)

        def pipelineMember(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(LockstepParser.PipelineMemberContext)
            else:
                return self.getTypedRuleContext(LockstepParser.PipelineMemberContext, i)

        def getRuleIndex(self):
            return LockstepParser.RULE_pipelineDecl

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterPipelineDecl"):
                listener.enterPipelineDecl(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitPipelineDecl"):
                listener.exitPipelineDecl(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitPipelineDecl"):
                return visitor.visitPipelineDecl(self)
            else:
                return visitor.visitChildren(self)

    def pipelineDecl(self):

        localctx = LockstepParser.PipelineDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_pipelineDecl)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.match(LockstepParser.T__14)
            self.state = 156
            self.match(LockstepParser.ID)
            self.state = 157
            self.match(LockstepParser.T__1)
            self.state = 161
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3F) == 0 and (
                (1 << _la)
                & (
                    (1 << LockstepParser.T__12)
                    | (1 << LockstepParser.T__15)
                    | (1 << LockstepParser.T__18)
                )
            ) != 0:
                self.state = 158
                self.pipelineMember()
                self.state = 163
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 164
            self.bindBlock()
            self.state = 165
            self.match(LockstepParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PipelineMemberContext(ParserRuleContext):

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def streamDecl(self):
            return self.getTypedRuleContext(LockstepParser.StreamDeclContext, 0)

        def accumDecl(self):
            return self.getTypedRuleContext(LockstepParser.AccumDeclContext, 0)

        def uniformDecl(self):
            return self.getTypedRuleContext(LockstepParser.UniformDeclContext, 0)

        def getRuleIndex(self):
            return LockstepParser.RULE_pipelineMember

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterPipelineMember"):
                listener.enterPipelineMember(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitPipelineMember"):
                listener.exitPipelineMember(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitPipelineMember"):
                return visitor.visitPipelineMember(self)
            else:
                return visitor.visitChildren(self)

    def pipelineMember(self):

        localctx = LockstepParser.PipelineMemberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_pipelineMember)
        try:
            self.state = 170
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LockstepParser.T__15]:
                self.enterOuterAlt(localctx, 1)
                self.state = 167
                self.streamDecl()
                pass
            elif token in [LockstepParser.T__18]:
                self.enterOuterAlt(localctx, 2)
                self.state = 168
                self.accumDecl()
                pass
            elif token in [LockstepParser.T__12]:
                self.enterOuterAlt(localctx, 3)
                self.state = 169
                self.uniformDecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StreamDeclContext(ParserRuleContext):

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typeName(self):
            return self.getTypedRuleContext(LockstepParser.TypeNameContext, 0)

        def INT(self):
            return self.getToken(LockstepParser.INT, 0)

        def ID(self):
            return self.getToken(LockstepParser.ID, 0)

        def getRuleIndex(self):
            return LockstepParser.RULE_streamDecl

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterStreamDecl"):
                listener.enterStreamDecl(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitStreamDecl"):
                listener.exitStreamDecl(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitStreamDecl"):
                return visitor.visitStreamDecl(self)
            else:
                return visitor.visitChildren(self)

    def streamDecl(self):

        localctx = LockstepParser.StreamDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_streamDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 172
            self.match(LockstepParser.T__15)
            self.state = 173
            self.match(LockstepParser.T__16)
            self.state = 174
            self.typeName()
            self.state = 175
            self.match(LockstepParser.T__7)
            self.state = 176
            self.match(LockstepParser.INT)
            self.state = 177
            self.match(LockstepParser.T__17)
            self.state = 178
            self.match(LockstepParser.ID)
            self.state = 179
            self.match(LockstepParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AccumDeclContext(ParserRuleContext):
